page css, acf stop publish field just visible when activated

--- a/css/ui/_structure.scss
+++ b/css/ui/_structure.scss
@@ -31,6 +31,14 @@ html {
 	font-family: $face;
 }
 
+
+/* page style */
+.page-content {
+	@extend .g;
+	@extend .one-whole;
+}
+
+
 /* Alignment */
 .alignleft {
 	@extend .margin--right;
